--- a/_posts/2020-06-29-News-4.md
+++ b/_posts/2020-06-29-News-4.md
@@ -1,14 +1,7 @@
 ---
-layout: post
+layout: page
 title: SWE News 4
 ---
-
-## Important dates
-
-May 2019 Cohort - Module 4 Full Stack + CI/CD | Mon 10 - Fri 21 August
-
-## Industry News
-
 * Apple is moving to ARM chips for it's laptops!
 * Big Sur (MAC OS 11) coming in the Autumn new UI
 * [Slack theme for VScode](https://github.com/slack-theme/visual-studio-code) :face_palm:
@@ -19,4 +12,8 @@ May 2019 Cohort - Module 4 Full Stack + CI/CD | Mon 10 - Fri 21 August
 
 🎧 podcasts
 
-The Talk Show with John Gruber (creator of markdown). WWDC digest John interviews Craig Federighi and Greg Joswiak (from Apple). 
+The Talk Show with John Gruber (creator of markdown). WWDC digest John interviews Craig Federighi and Greg Joswiak (from Apple).
+
+## Important dates
+
+May 2019 Cohort - Module 4 Full Stack + CI/CD | Mon 10 - Fri 21 August
