--- a/_posts/2020-06-29-News-4.md
+++ b/_posts/2020-06-29-News-4.md
@@ -10,7 +10,7 @@ title: SWE News 4
 
 [Rubber Duck Debugging](http://thecodebarbarian.com/rubber-duck-debugging-for-javascript-developers.html) nice short article with some top tips for debugging your code. This technic becomes much easier to do when you are sat at home alone (rather than in a busy office). Start talking your problem out loud to your water bottle or pet cat.
 
-🎧 podcasts
+## 🎧 podcasts
 
 The Talk Show with John Gruber (creator of markdown). WWDC digest John interviews Craig Federighi and Greg Joswiak (from Apple).
 
