updates news with link to veritys article

--- a/_posts/2020-06-29-News-4.md
+++ b/_posts/2020-06-29-News-4.md
@@ -6,6 +6,10 @@ title: SWE News 4
 * Big Sur (MAC OS 11) coming in the Autumn new UI
 * [Slack theme for VScode](https://github.com/slack-theme/visual-studio-code) :face_palm:
 
+## Verity's article
+
+Verity from the 2019 August cohort has put together an awesome article on Object Orientated Programming. Verity is on the Android team at Sky. [Check it out here](https://community.whitehat.org.uk/news/293274).
+
 ## Rubber Ducking
 
 [Rubber Duck Debugging](http://thecodebarbarian.com/rubber-duck-debugging-for-javascript-developers.html) nice short article with some top tips for debugging your code. This technic becomes much easier to do when you are sat at home alone (rather than in a busy office). Start talking your problem out loud to your water bottle or pet cat.
@@ -15,5 +19,6 @@ title: SWE News 4
 The Talk Show with John Gruber (creator of markdown). WWDC digest John interviews Craig Federighi and Greg Joswiak (from Apple).
 
 ## Important dates
+
 
 May 2019 Cohort - Module 4 Full Stack + CI/CD | Mon 10 - Fri 21 August
