--- a/_posts/2020-08-10-News-7.md
+++ b/_posts/2020-08-10-News-7.md
@@ -9,8 +9,10 @@ title: SWE News 7
 ## What? thats cool 👾
 
 * It's summer. Time to have some fun with Javascript. How about this for inspiration?
+
 ![racing game](https://i.imgur.com/XBQ8FZj.gif)
-It's on entrance to the 2KPlus Jam The primary goal of this comp was to create a game that fits entirely in a 2 kilobyte zip file. That is incredibly small, for point of reference a 3.5 floppy disk 💾 could hold over 700 of these games!
+
+This is one of the entrees to the 2KPlus Jam. The primary goal of this comp was to create a game that fits entirely in a 2 kilobyte zip file. That is incredibly small, for point of reference a 3.5 floppy disk 💾 could hold over 700 of these games!
 
 ## Dates
 
